tests/fixtures/valid/run_rc_string_reclaim.lby
fn main -> i64
    let total i64 = 0
    for i from 0 to 300000
        let s string = "a_constant_string_of_some_length"
        total = total + len(s)
    total
