tests/fixtures/invalid/string_plus_int.lby
fn main -> string
    "n=" + 5
